--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.1.2",
     "motion": "^12.5.0",
     "next": "^15.2.3",
+    "next-seo": "^6.6.0",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
